# paw

./: Cargo.toml  readme.md
pawcro/: Cargo.toml
pawcro/src/: lib.rs
scenes/: distorted_sphere.json  external.json  simple.json  sphere.json  union.json
src/: camera.rs  config.rs  debug.rs  film.rs  main.rs  object.rs  ray.rs  scene.rs
src/attributes/: base.rs  mod.rs
src/attributes/alterations/: elongate.rs  mod.rs  onion.rs  round.rs
src/attributes/deformations/: displace.rs  mod.rs
src/attributes/positioning/: mirror.rs  mirrored.rs  mod.rs  repeat.rs  scale.rs  translate.rs
src/hittables/: attributes.rs  base.rs  cube.rs  difference.rs  intersection.rs  mod.rs  scene.rs  sphere.rs  union.rs
src/hittables/aggregates/: adapter.rs  container.rs  external.rs  mod.rs  scene.rs
src/hittables/alterarions/: elongate.rs  mod.rs  onion.rs  round.rs
src/hittables/combinations/: intersection.rs  mod.rs  smooth_intersection.rs  smooth_subtraction.rs  smooth_union.rs  subtraction.rs  union.rs
src/hittables/positioning/: mirrored.rs  mod.rs  repeat.rs  scale.rs  translate.rs
src/hittables/primitives/: base.rs  cuboid.rs  mod.rs  plane.rs  sphere.rs
src/lights/: base.rs  mod.rs  point.rs
src/materials/: base.rs  checkered.rs  color.rs  lambertian.rs  mod.rs  normal.rs  snow.rs
src/shaders/: base.rs  mod.rs  path.rs  phong.rs
src/util/: bounds.rs  mod.rs  normal.rs  reflect.rs  types.rs
