[package]
name = "paw"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
pawcro = {path = "pawcro"}

nalgebra = { version = "*", features = ["serde-serialize"] }
bmp = "*"
rand = "*"

serde = { version = "1.0", features = ["derive"] }
typetag = "0.1.7"
serde_json = "1.0"